# seaport

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  SECURITY.md  pyproject.toml  seaport.sh
.github/: dependabot.yml  question.md
.github/workflows/: codeql-analysis.yml  shellcheck.yml  test.yml
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  contibuting.rst  index.rst  maintainer.rst  overview.rst  reference.rst
scripts/: autocomplete.sh  format.sh  tests.sh
scripts/tests/: dependencies.sh  formatting.sh  pytest.sh  test.sh  type_checking.sh
seaport/: __init__.py  _click_functions.py  _init.py  _pep584_constants.py  _pep585_constants.py  additional.py  checks.py  checksums.py  clean.py  click_functions.py  console.py  init.py  portfile.py  portfile_numbers.py  py.typed
seaport/_autocomplete/: seaport.bash  seaport.fish  seaport.zsh
seaport/_clipboard/: __init__.py  additional.py  checks.py  clipboard.py  format.py  user.py
seaport/_clipboard/portfile/: __init__.py  checksums.py  portfile_numbers.py
seaport/_pull_request/: __init__.py  clone.py  portfile.py  pull_request.py
seaport/autocomplete/: __init__.py
seaport/clipboard/: __init__.py  additional.py  checks.py  clean.py  clipboard.py  format.py  user.py
seaport/clipboard/portfile/: __init__.py  checksums.py  portfile_numbers.py
seaport/commands/: __init__.py  autocomplete.py  clipboard.py  pull_request.py
seaport/commands/autocomplete/: __init__.py  autocomplete.py
seaport/commands/autocomplete/bash/: seaport.sh
seaport/commands/autocomplete/fish/: seaport.sh
seaport/portfile/: checksums.py  portfile_numbers.py
seaport/pull_request/: __init__.py  clone.py  portfile.py  pull_request.py
tests/: __init__.py  test_additional.py  test_checks.py  test_checksums.py  test_clean.py  test_cli.py  test_click_functions.py  test_console.py  test_format.py  test_portfile.py  test_portfile_numbers.py  test_seaport.py
tests/clipboard_tests/: __init__.py  test_additional.py  test_checks.py  test_clean.py  test_format.py  test_user.py
tests/clipboard_tests/portfile/: test_portfile_numbers.py
tests/clipboard_tests/portfile_tests/: __init__.py  test_checksums.py  test_portfile_numbers.py
tests/portfile_tests/: test_checksums.py
tests/pull_request_tests/: __init__.py  test_clone.py  test_portfile.py
