[tool.poetry]
name = "seaport"
version = "0.6.1"
description = "The modern MacPorts portfile updater"
authors = ["harens <harensdeveloper@gmail.com>"]
maintainers = ["harens <harensdeveloper@gmail.com>"]
readme = "README.rst"
license = "BSD-3-Clause"
include = ["seaport/py.typed"]
keywords = ["MacPorts", "Port", "Bump", "Checksums"]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]

homepage = "https://seaport.rtfd.io/"
repository = "https://github.com/harens/seaport"
documentation = "https://seaport.rtfd.io/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/harens/seaport/issues"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"  # See https://python-poetry.org/docs/dependency-specification/#caret-requirements
click = "^8.1.3"
beartype = "^0.10.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest-subprocess = "^1.4.1"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
coverage = "^6.4.2"
pydocstyle = "^6.1.1"
pre-commit = "^2.20.0"
pyupgrade = "^2.37.3"
safety = "^2.1.1"
Sphinx = "^5.1.1"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^4.3.0"
sphinxcontrib-programoutput = "^0.17"
pytype = "^2022.7.26"

[tool.poetry.scripts]
seaport = "seaport._init:seaport"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# See https://pycqa.github.io/isort/docs/configuration/black_compatibility/
[tool.isort]
profile = "black"
multi_line_output = 3

# See https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.black]
target-version = ["py38"]

[tool.commitizen]
version = "0.6.1"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "seaport/__init__.py",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
