[tool.poetry]
name = "seaport"
version = "0.9.0"
description = "The modern MacPorts portfile updater"
authors = ["harens <harensdeveloper@gmail.com>"]
maintainers = ["harens <harensdeveloper@gmail.com>"]
readme = "README.rst"
license = "BSD-3-Clause"
include = ["seaport/py.typed"]
keywords = ["MacPorts", "Port", "Bump", "Checksums"]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]

homepage = "https://seaport.rtfd.io/"
repository = "https://github.com/harens/seaport"
documentation = "https://seaport.rtfd.io/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/harens/seaport/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
click = "^8.1.3"
beartype = "^0.12.0"
typing-extensions = { version = ">=4.0.0, <5.0", python = "<3.9" }

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "5.11.5"
mypy = "^1.0.0"
pytest-subprocess = "^1.5.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
coverage = "^7.1.0"
pydocstyle = "^6.3.0"
pre-commit = "2.21.0"
pyupgrade = "^3.3.1"
Sphinx = "5.3.0"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^4.4.0"
sphinxcontrib-programoutput = "^0.17"
commitizen = "^2.40.0"

[tool.poetry.scripts]
seaport = "seaport._init:seaport"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# See https://pycqa.github.io/isort/docs/configuration/black_compatibility/
[tool.isort]
profile = "black"
multi_line_output = 3

# See https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.black]
target-version = ["py37"]

[tool.commitizen]
version = "0.9.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "seaport/__init__.py",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
